crates/monochange/src/snapshots/monochange____tests__subagents_overwrite_error.snap
---
source: crates/monochange/src/__tests.rs
expression: error.to_string()
---
config error: refusing to overwrite existing subagent files without --force: .mcp.json
